<resources>
    <string name="app_name" translatable="false">GeoIndoor</string>
    <string name="api_key" translatable="false">AIzaSyC5AcIeKsc9kWRn7koAkHpWn6c_wdDBt8c</string>

    <!-- Language Screen Strings -->
    <string name="lang_continue">Continue</string>
    <string name="lang_select">Select your language</string>
    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">Français</string>


    <!-- Agenda Strings -->
    <string name="agenda">Agenda</string>
    <string name="view">View</string>
    <string name="create">Create</string>

    <!-- Create Agenda Strings -->
    <string name="create_agenda">Create Agenda</string>
    <string name="create_agenda_error">Please fill each fields</string>
    <string name="agenda_name">Agenda Name</string>
    <string name="agenda_type">Agenda Type</string>
    <string name="appointment">Appointment</string>
    <string name="bakery">Bakery</string>
    <string name="get_together">Get Together</string>
    <string name="hospital">Hospital</string>
    <string name="meeting">Meeting</string>
    <string name="social_event">Social Event</string>
    <string name="walk">Walk</string>
    <string name="other">Other</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="address">Address</string>
    <string name="person_meet">Person to meet</string>
    <string name="contact_number">Contact Number</string>
    <string name="notes">Notes</string>
    <string name="agenda_create_success">Agenda created successfully.</string>
    <string name="agenda_create_failure">Something went wrong, please try again later.</string>
    <string name="agenda_create_conflict">Agenda with same date and time already exist, please change it.</string>

    <string-array name="agenda_types">
        <item>@string/agenda_type</item>
        <item>@string/appointment</item>
        <item>@string/bakery</item>
        <item>@string/get_together</item>
        <item>@string/hospital</item>
        <item>@string/meeting</item>
        <item>@string/social_event</item>
        <item>@string/walk</item>
        <item>@string/other</item>
    </string-array>

    <string name="submit">Submit</string>
    <string name="next">Next</string>

    <!-- Where am I Strings -->
    <string name="whereAmI">Where Am I ?</string>
    <string name="youAreHere">You are Here !!</string>
    <string name="location_perms">Location Permission Granted</string>


    <!-- Detail Agenda Strings -->
    <string name="detail_agenda">Detail Agenda</string>
    <string name="agenda_update_success">Agenda Details have been updated</string>
    <string name="agenda_update_failure">Agenda Details are same and cannot be updated</string>
    <string name="delete_agenda">Delete an Agenda</string>
    <string name="delete_agenda_warn">Do you want to delete this agenda? This cannot be undone</string>
    <string name="agenda_success">Agenda has been deleted</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="complete">Complete</string>
    <string name="agenda_completed">Agenda Completed!</string>


    <string name="meet_doctor">Meet with doctor</string>
    <string name="check_up">Check up</string>
    <string name="dr_fok" translatable="false">Dr Fok</string>
    <string name="date">Date</string>
    <string name="sample_date" translatable="false">21–4-2021</string>
    <string name="time">Time</string>
    <string name="sample_time" translatable="false">12:48</string>
    <string name="sample_number" translatable="false">0411111111</string>
    <string name="update">Update</string>

    <!-- Forgot Password Strings -->
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_success">Password Successfully Reset</string>
    <string name="reset_password_failure">Invalid Mobile Number</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_pass_8">Please enter password of minimum 8 characters</string>
    <string name="please_confirm_password">Please confirm password</string>
    <string name="password_match_failure">Password confirmation does not match password</string>

    <string name="mobile">Mobile</string>
    <string name="new_password">New Password</string>
    <string name="c_new_password">Confirm New Password</string>

    <!-- Home Page Strings -->
    <string name="home_page">Home Page</string>
    <string name="hello_sp">Hello </string>

    <string name="profile">Profile</string>

    <!-- Login Form Strings -->
    <string name="login">Login</string>
    <string name="invalid_creds">Invalid mobile/password</string>

    <string name="remember_me">Remember Me</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password_qm">Forgot Password?</string>

    <!-- Main Form Strings -->
    <string name="main_form">Main Form</string>

    <string name="hello_world_x">Hello World!</string>

    <!-- Navigation Strings -->
    <string name="navigation">Navigation</string>

    <string name="view_agenda_map">View agenda on map</string>

    <!-- Register Strings -->
    <string name="register">Register</string>

    <string name="please_fname">Please enter first name</string>
    <string name="please_lname">Please enter Last name</string>
    <string name="uploading_image">Uploading Image ...</string>
    <string name="image_uploaded">Image Uploaded.</string>
    <string name="percentage">Percentage: </string>

    <string name="please_birth">Please enter date of birth</string>

    <string name="mobile_failure">Mobile number already exists</string>
    <string name="please_email">Please enter email address</string>
    <string name="please_valid_email">Please enter a valid email address</string>
    <string name="please_mobile">Please enter mobile number</string>
    <string name="please_valid_mobile">Please enter a valid mobile number</string>

    <string name="please_select_option">Please select an option</string>

    <string name="none">None</string>

    <string name="no_agenda">No agenda created</string>

    <string name="register_success">Registration successful!</string>
    <string name="register_failure">Registration unsuccessful!</string>

    <string name="change_picture">Change Picture</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="email">Email</string>
    <string name="mobility">Mobility</string>
    <string name="walker">Walker</string>
    <string name="wheelchair">Wheelchair</string>
    <string name="visual_impairment">Visual impairment</string>
    <string name="hearing_impairment">Hearing impairment</string>
    <string name="speech_impairment">Speech impairment</string>


    <!-- View Agenda Strings -->
    <string name="view_agenda">View Agenda</string>

    <!-- View Agenda Strings -->
    <string name="view_my_agenda_map">View My Agendas on the Map</string>
    <string name="no_agenda_planned">No Agendas Planned for Today</string>

    <!-- View Profile Strings -->
    <string name="user_profile">User Profile</string>
    <string name="user_update_success">User Details have been updated</string>
    <string name="user_update_failure">User Details are same and cannot be updated</string>

    <string name="swanston">Swanston</string>
    <string name="email_address">Email Address</string>
    <string name="disability_type">Disability type</string>
    <string name="mobility_type">Mobility type</string>

    <!-- Notification Strings -->
    <string name="snooze_off">Snooze off</string>
    <string name="flashlight">Flashlight</string>
</resources>
